--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,50 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
+    'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #222;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1 {
+  color: #f5f5f5;
+  font-size: 120px;
+  font-weight: 900;
+  line-height: 150px;
+  margin: 0;
+}
+
+h2 {
+  color: #f5f5f5;
+  font-size: 64px;
+  line-height: 80px;
+  margin: 0;
+}
+
+h3 {
+  font-size: 48px;
+  font-weight: 900;
+  line-height: 60px;
+  margin: 0;
+}
+h4 {
+  margin: 0;
+  font-size: 24px;
+  color: #666;
+}
+
+p {
+  color: #f5f5f5;
+  margin: 0;
+  font-size: 14px;
+  line-height: 21px;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:active {
+  color: 'white';
 }
